# Conversor_de_unidades

./: LICENSE  README.md  gitignore  main.py  pyproject.toml
conversor_unidades/: __init__.py  longitud.py  longitude.py  peso.py  setup.py  temperatura.py  velocidade.py
src/conversor-unidades-miguelb/: peso.py
src/conversor_unidades/: temperatura.py  velocidade.py
