[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "conversor_unidades"
version = "0.1"
dependencies = ["numpy"]
description = "Un paquete para convertir unidades de longitud, temperatura, peso y velocidad"
authors = [{name = "Miguel B. Simão", email = "leaismiguelss@gmail.com"}]
license = "MIT"

