[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "conversor-unidades-miguelb"
version = "0.1"
dependencies = ["numpy"]
description = "Un paquete para convertir unidades de longitud, temperatura, peso y velocidad"
authors = [{name = "Miguel B. Simão", email = "leaismiguelss@gmail.com"}]
license = "MIT"

[project.urls]
Homepage = "https://github.com/Miguel21S/Conversor_de_unidades.git"